--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             var data=await response.json();
             quote.innerHTML=data.content;
             author.innerHTML=data.author;
-            console.log(data);
+            //console.log(data);
         }
         getquote(api_url);
 
