--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <script>
         const quote=document.getElementById("quote");
         const author=document.getElementById("author");
-        const api_url="https://api.quotable.io/random";
+        const api_url="https://quotes-api-self.vercel.app/quote";
 
         async function getquote(url) {
             const response=await fetch(url);
             var data=await response.json();
-            quote.innerHTML=data.content;
+            quote.innerHTML=data.quote;
             author.innerHTML=data.author;
-            //console.log(data);
+            console.log(data);
         }
         getquote(api_url);
 
@@ -37,7 +37,7 @@
             window.open("https://twitter.com/intent/tweet?text="+quote.innerHTML+" ---- by "+author.innerHTML, "X Share Window", "width=600, height=300");
         }
         function whatsapp() {
-            window.open("https://wa.me/?text="+quote.innerHTML+" ---- by "+author.innerHTML, "X Share Window", "width=600, height=300");
+            window.open("https://wa.me/?text="+quote.innerHTML+" ---- by "+author.innerHTML, "Whats App Share Window", "width=600, height=300");
         }
     </script>
 
